--- a/src/app/character-stats/character-stats.page.html
+++ b/src/app/character-stats/character-stats.page.html
@@ -14,9 +14,9 @@
   <mat-card>
     <mat-card-content *ngIf="this.allBuffs === false">
       <ng-container *ngFor="let buff of activeCombatBuffs">
-        <div style="display:flex; justify-content:space-between; align-items:center">
-          <div style="display:flex; align-items:center">
-            <div style="display:flex; flex-direction:column">
+        <div class="table-div">
+          <div class="row-div">
+            <div class="col-div">
               <div>
                 {{ buff.name }}
               </div>
@@ -32,9 +32,9 @@
         </div>
       </ng-container>
       <ng-container *ngFor="let buff of activeACBuffs">
-        <div style="display:flex; justify-content:space-between;align-items:center">
-          <div style="display:flex;align-items:center">
-            <div style="display:flex; flex-direction:column">
+        <div class="table-div">
+          <div class="row-div">
+            <div class="col-div">
               <div>
                 {{ buff.name }}
               </div>
@@ -50,9 +50,9 @@
         </div>
       </ng-container>
       <ng-container *ngFor="let buff of activeSTBuffs">
-        <div style="display:flex; justify-content:space-between;align-items:center">
-          <div style="display:flex;align-items:center">
-            <div style="display:flex; flex-direction:column">
+        <div class="table-div">
+          <div class="row-div">
+            <div class="col-div">
               <div>
                 {{ buff.name }}
               </div>
@@ -70,9 +70,9 @@
     </mat-card-content>
     <mat-card-content *ngIf="this.allBuffs === true">
       <ng-container *ngFor="let buff of this.actualGameCharacter.buffs">
-        <div style="display:flex; justify-content:space-between; align-items:center">
-          <div style="display:flex; align-items:center">
-            <div style="display:flex; flex-direction:column">
+        <div class="table-div">
+          <div class="row-div">
+            <div class="col-div">
               <div>
                 {{ buff.name }}
               </div>
