Sistemato aumento taglia dell arma

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -61,7 +61,7 @@
                     <mat-card class="normal-card">
                         <mat-card-header>
                             <mat-card-title [(ngModel)]="actualDamages" ngDefaultControl>
-                                Danni: {{ getWeaponDice() }} +{{ actualDamages }} </mat-card-title>
+                                Danni: {{ actualWeaponDice }} +{{ actualDamages }} </mat-card-title>
                         </mat-card-header>
 
                         <mat-card-content>
