New class button added, action still has to be linked

--- a/src/app/add-character/add-character.page.html
+++ b/src/app/add-character/add-character.page.html
@@ -29,6 +29,7 @@
               <mat-option *ngFor="let c of classes" [value]="c">
                 {{ c }}
               </mat-option>
+              <button mat-button style="width: 100%; text-align: left">Nuova Classe...</button>
             </mat-select>
           </mat-form-field>
         </div>
