--- a/src/app/edit-buff/edit-buff.page.html
+++ b/src/app/edit-buff/edit-buff.page.html
@@ -141,7 +141,7 @@
 </mat-drawer-container>
 
 <table cellspacing="0" class="save-button-div"><tr>
-  <td><button mat-flat-button color="accent" (click)="delBuff($event)" class="del-button">Elimina</button></td>
+  <td><button mat-flat-button color="warn" (click)="delBuff($event)" class="del-button">Elimina</button></td>
   <td><button mat-flat-button color="primary" (click)="saveBuff($event)" class="save-button">Salva</button></td>
 </tr>
 </table>
