--- a/src/app/edit-character/edit-character.page.scss
+++ b/src/app/edit-character/edit-character.page.scss
@@ -7,26 +7,38 @@
 mat-toolbar {
 }
 
+mat-drawer-container {
+  flex: 1 1 auto;
+  flex-grow: 1;
+  overflow: auto;
+}
+
 .pg-form {
-  position: absolute;
-  float: top;
-  align-content: center;
-  align-self: center;
-  width: 90%;
-  align-items: center;
-  justify-content: center;
-  margin-top: 5rem;
   max-width: 500px;
+  width: 95%;
+  margin: 1rem auto 3rem;
+  text-align: center;
+}
+
+.element-edit-table {
+  width: 95%;
+  margin: 1rem auto;
 }
 
 .row {
   display: flex;
-  width: 100%;
+  width: 95%;
+  margin: 0 auto;
 }
 
 .column {
-  flex: 50%;
-  text-align: center;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.column3 {
+  max-width: 8rem;
+  margin: 0 auto;
 }
 
 .info-row {
@@ -43,31 +55,54 @@ mat-toolbar {
 }
 
 .stat {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  max-width: 9rem;
+}
+
+.stat3 {
   width: 55%;
+  max-width: 8rem;
+}
+
+.del-button {
+  position: relative;
+  text-align: center;
+  margin-left: 1rem;
+  margin-right: 0.5rem;
+  width: 9rem;
 }
 
 .save-button {
-  width: 100%;
+  position: relative;
+  text-align: center;
+  margin-left: 0.5rem;
+  margin-right: 1rem;
+  width: 9rem;
 }
 
-.delete-button {
-  width: 100%;
+.icon-add-buff {
+  position: relative;
+  float: left;
+  margin-right: 1rem;
+}
+
+.save-button-div {
+  position: fixed;
+  bottom: 1rem;
+  width: 21rem;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1
 }
 
 .radio-buttons {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
-.save-button-div {
-  align-content: center;
-  text-align: center;
-  align-self: center;
-  width: 75%;
-  position: fixed;
-  left: 50%;
-  margin-left: -37.5%;
-  bottom: 0.5rem;
-  z-index: 1;
-  margin-bottom: 3%;
+.radio-button {
+  margin: 1rem;
 }
+
+
