class-dialog component working

--- a/src/app/class-dialog/class-dialog.component.html
+++ b/src/app/class-dialog/class-dialog.component.html
@@ -1,3 +1,11 @@
-<p>
-  class-dialog works!
-</p>
+<mat-label mat-dialog-title>Inserisci nuova classe</mat-label>
+<mat-dialog-content>
+  <div style="align-content: center">
+      <input id="newClass" placeholder="Classe" style="width: 100%" label="NewClass" [(ngModel)]="text">
+  </div>
+  <div style="width: 100%; text-align: center">
+      <button mat-button mat-dialog-close="{{ this.text }}">OK</button>
+      <button mat-button mat-dialog-close>Chiudi</button>
+  </div>
+</mat-dialog-content>
+
