--- a/src/app/edit-character/edit-character.page.html
+++ b/src/app/edit-character/edit-character.page.html
@@ -147,7 +147,7 @@
   </form>
 
   <table cellspacing="0" class="save-button-div"><tr>
-    <td><button mat-flat-button color="warn" (click)="deleteCharacter()" class="del-button">Elimina</button></td>
+    <td><button mat-flat-button color="warn" (click)="openDoubleCheckDialog()" class="del-button">Elimina</button></td>
     <td><button mat-flat-button color="primary" (click)="editCharacter()" class="save-button">Salva</button></td>
   </tr>
   </table>
