--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -19,10 +19,10 @@
             </button>
         </mat-toolbar>
         <mat-nav-list *ngFor="let c of allCharacters">
-            <a mat-list-item (click)="onSelChange(c);drawer.toggle()" [ngClass]="c === actualGameCharacter ? 'selected' : 'unselected'">
+            <a mat-list-item (click)="onSelChange(c); drawer.toggle()" [ngClass]="c === actualGameCharacter ? 'selected' : 'unselected'">
                 <mat-icon aria-label="face">face</mat-icon>
                 <mat-label style="padding-left: 5%">{{ c.name }}</mat-label>
-                <button class="edit-char-button" mat-icon-button (click)="editCharacter($event, c)">
+                <button class="edit-char-button" mat-icon-button (click)="editCharacter($event, c); drawer.toggle()">
                     <mat-icon>edit</mat-icon>
                 </button>
             </a>
